# atlas77

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  SPECIFICATIONS.md  a.out  build.rs
examples/: array_of_array.atlas  bitwise_copy.atlas  empty.atlas  fib.atlas  hello.atlas  map_robin_hood_test.atlas  method_generics.atlas  special_constructor.atlas  stack_alloc.atlas  stack_probe_heap.atlas  stack_probe_stack.atlas  test.atlas  where_clause.atlas
libraries/blue_engine/: engine.atlas
libraries/core/: optional.atlas  reflection.atlas
libraries/core/experimental/: int128.atlas  reflection.atlas
libraries/raylib/: raylib.atlas
libraries/std/: atlas77.h  either.atlas  expected.atlas  io.atlas  map.atlas  math.atlas  mem.atlas  memory.atlas  optional.atlas  string.atlas  time.atlas  useful_header.h  vector.atlas
libraries/std/experimental/: array.atlas  c_vec.atlas  cast.atlas  hashmap.atlas  slice.atlas  smart_ptr.atlas  string_builder.atlas  traits.atlas
self/src/: lexer.atlas
specs/: Document 0 - Language Overview and Philosophy.md  README.md
src/: lib.rs  main.rs  package.rs  tcc.rs
src/atlas_c/: mod.rs
src/atlas_c/atlas_codegen/: mod.rs
src/atlas_c/atlas_frontend/: mod.rs
src/atlas_c/atlas_frontend/lexer/: mod.rs  token.rs
src/atlas_c/atlas_frontend/parser/: ast.rs  error.rs  mod.rs
src/atlas_c/atlas_hir/: arena.rs  error.rs  expr.rs  item.rs  mod.rs  pretty_print.rs  signature.rs  special_methods.rs  stmt.rs  ty.rs  warning.rs
src/atlas_c/atlas_hir/monomorphization_pass/: generic_pool.rs  mod.rs
src/atlas_c/atlas_hir/ownership_pass/: mod.rs
src/atlas_c/atlas_lir/: error.rs  mod.rs  program.rs  warning.rs
src/atlas_c/utils/: mod.rs
src/atlas_lib/: mod.rs
(+5 files in other folders)
